Closed Bug 34089 Opened 24 years ago Closed 24 years ago

CCK is unable to make browser customizations due to install path

Categories

(CCK Graveyard :: CCK-Wizard, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bmartin, Assigned: vparthas)

Details

Latest CCK build dated: 03-30-00

O/S: WinNT4.0

Steps to Reproduce:
1. Download and Install CCK to default path (C:\Program Files\Netscape\cck)
2. Launch cck
3. Choose MyISP config
4. Change the Animated Logo URL to http:/www.google.com
5. Change the Home button URL to http://www.cnn.com
6. Proceed to Build Installer screen and select build installer button

Results:

None of the Browser customizations make it into the build.

Expected:

The MyISP animated & still .gifs, Home button URL, Animated Logo URL, titlebar 
to be as specified from above changes and as specified in MyISP config.

*** This problem stems from CCK's inability to handle the space in the Program 
Files\ directory or any destination directory with a space.

We recently went from installing default path to C:\CCK to C:\Program 
Files\Netscape\cck

I have done the following verification tests reinforcing the problem cck is 
having with the space in Program Files:

Installed to:

C:\Program Files\Netscape\cck - No Browser customizations make it into the build
D:\Program Files\Netscape\cck - No Browser customizations make it into the build
D:\Program Files\ - No Browser customizations make it into the build
D:\Program Files\Brent - No Browser customizations make it into the build
D:\CCK\ - Working as Expected
D:\ProgramFiles\cck\ - Working as Expected
Marking fixed.
This was happening because of spaces in directory - fixed it by appending quotes  
in the command line.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking this bad boy Verified Fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.