fix for bug #34089 - customizations werent makeing it in because there were spaces in the directory name - fixed it by appending the quotes before and after the directory name